overflow fix 2

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -49,7 +49,7 @@ div#adv-pnl
    right:15px;
    width:300px;
    height:200px;
-   overflow-y: scroll;
+   overflow-y: auto;
 }
 
 button#inv-btn
